===============================================================


--------------------------------------------------------------------------
NEWS for version 0.11.1  (release date to be decided)
--------------------------------------------------------------------------

Bugfixes
========

o  Corrected an efficiency bug in the C language interface function
     int ppl_Linear_Expression_add_to_coefficient()

o  Corrected an efficiency bug in method
     MIP_Problem::compute_generator()

o  Corrected a bug affecting the input routine of ppl_lpsol, whereby
   the inhomogeneous term of the objective function was disregarded.

o  Corrected a bug affecting methods

     Box::CC76_widening_assign(const T&, Iterator, Iterator)
     Interval::CC76_widening_assign(const From&, Iterator, Iterator)

   whereby a lower bound would not be computed correctly when the two
   iterators specify an empty list of stop points.

o  Fixed a bug affecting

     Interval::Interval(const char* s)

   whereby a wrong interval would be constructed if `s' denotes a number
   that can only be represented as an infinity.


--------------------------------------------------------------------------
NEWS for version 0.11  (released on August 2, 2010)
--------------------------------------------------------------------------

New and Changed Features
========================

o  New class PIP_Problem provides a Parametric Integer Programming
   (PIP) problem solver (mainly based on P. Feautrier's
   specification).  The implementation combines a parametric dual
   simplex algorithm using exact arithmetic with Gomory's cut
   generation.

o  New "deterministic" timeout computation facilities: it is now
   possible to set computational bounds (on the library calls taking
   exponential time) that do not depend on the actual elapsed time and
   hence are independent from the actual computation environment (CPU,
   operating system, etc.).
